--- a/ToeicWeb/Areas/Customer/Views/Luyentap/PracticePart4.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Luyentap/PracticePart4.cshtml
@@ -17,15 +17,15 @@
         <!-- Phần bài làm (câu hỏi) bên trái -->
         <div class="col-md-8">
             <!-- Form câu hỏi -->
-            <form asp-action="ResultDetailPart1" method="post" id="tracNghiemForm">
+            <form asp-action="ResultDetailPart4" method="post" id="tracNghiemForm">
                 <input type="hidden" name="baiTapId" value="@Model.BaiTapNge.Id" />
                 @for (int i = 0; i < Model.CauHoiNgeList.Count; i++)
                 {
                 // Kiểm tra giá trị của đường dẫn
 
                     <div class="question-block" id="question_@Model.CauHoiNgeList[i].Id" style="padding: 10px; margin-bottom: 30px;">
-                       
-                       
+
+
                         @if (!string.IsNullOrEmpty(Model.CauHoiNgeList[i].Audio))
                         {
                             <div class="box-audio mb-3">
@@ -44,10 +44,10 @@
                         @{
                             var options = new[]
                             {
-                    new { Text = Model.CauHoiNgeList[i].Dap_an_1 },
-                    new { Text = Model.CauHoiNgeList[i].Dap_an_2 },
-                    new { Text = Model.CauHoiNgeList[i].Dap_an_3 },
-                    new { Text = Model.CauHoiNgeList[i].Dap_an_4 }
+                    new { Letter = "A", Text = Model.CauHoiNgeList[i].Dap_an_1 },
+                    new { Letter = "B", Text = Model.CauHoiNgeList[i].Dap_an_2 },
+                    new { Letter = "C", Text = Model.CauHoiNgeList[i].Dap_an_3 },
+                    new { Letter = "D", Text = Model.CauHoiNgeList[i].Dap_an_4 }
 
                     };
                         }
@@ -57,7 +57,7 @@
                         {
                             <div>
                                 <input type="radio" name="cauHoi_@Model.CauHoiNgeList[i].Id" value="@options[j].Text" onchange="markAsSelected(@Model.CauHoiNgeList[i].Id)" />
-                                <label> @options[j].Text.</label>
+                                <label>@options[j].Letter. @options[j].Text.</label>
                             </div>
                         }
 
@@ -105,7 +105,7 @@
 <script>
     var elapsedTime = 0;
     var timerElement = document.getElementById('timer');
-    setInterval(function () {
+    setInterval(function() {
         var minutes = Math.floor(elapsedTime / 60);
         var seconds = elapsedTime % 60;
         seconds = seconds < 10 ? "0" + seconds : seconds;
@@ -114,7 +114,7 @@
         elapsedTime++;
     }, 1000);
 
-    window.onload = function () {
+    window.onload = function() {
         startTimer();
     };
 
