--- a/ToeicWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -48,8 +48,7 @@
                     </div>
 
                     <div>
-                        <a asp-action="Details"
-                           asp-route-productId="Id"
+                        <a asp-area="Customer" asp-controller="Luyentap" asp-action="Part2"
                            class="btn btn-primary bg-gradient  form-control">
                             Luyện tập
                         </a>
@@ -76,8 +75,7 @@
                     </div>
 
                     <div>
-                        <a asp-action="Details"
-                           asp-route-productId="Id"
+                        <a asp-area="Customer" asp-controller="Luyentap" asp-action="Part3"
                            class="btn btn-primary bg-gradient  form-control">
                             Luyện tập
                         </a>
@@ -104,8 +102,7 @@
                     </div>
 
                     <div>
-                        <a asp-action="Details"
-                           asp-route-productId="Id"
+                        <a asp-area="Customer" asp-controller="Luyentap" asp-action="Part4"
                            class="btn btn-primary bg-gradient  form-control">
                             Luyện tập
                         </a>
