--- a/ToeicWeb/Areas/Customer/Views/Luyentap/ResultDetailPart2.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Luyentap/ResultDetailPart2.cshtml
@@ -33,13 +33,6 @@
                         </div>
                     }
 
-                    <!-- Hiển thị hình ảnh nếu có -->
-                    @if (!string.IsNullOrEmpty(question.Image))
-                    {
-                        <div class="box-image w-75 h-50">
-                            <img src="~/@question.Image" alt="Question Image" class="img-fluid" />
-                        </div>
-                    }
 
                     <!-- Hiện transcript -->
                     <div class="mt-4">
@@ -52,17 +45,15 @@
                             </div>
                         </div>
                     </div>
-                   
-                    
+
+
                     <div class="my-3"><b>@Model.CauHoiNgeList[i].Thu_tu_cau</b></div>
                     <!-- Hiển thị đáp án -->
                     @{
                         var options = new[] {
                 new { Text = question.Dap_an_1 },
                 new { Text = question.Dap_an_2 },
-                new { Text = question.Dap_an_3 },
-                new { Text = question.Dap_an_4 }
-
+                new { Text = question.Dap_an_3 }
                 };
 
                         var userAnswered = !string.IsNullOrEmpty(question.UserAnswer);
@@ -78,7 +69,7 @@
                             <!-- Apply color only if user answered, otherwise no color -->
                             <span style="color: @(userAnswered && isUserAnswer ? (isCorrectAnswer ? "green" : "#e69a9c") : (userAnswered && isCorrectAnswer ? "green" : "black")); font-weight: @(userAnswered && (isUserAnswer || isCorrectAnswer) ? "bold" : "normal");">
                                 <input type="radio" name="cauHoi_@question.Id" value="@option.Text" disabled @(isUserAnswer ? "checked" : "") />
-                                @option.Text.
+                                @option.Text
                             </span>
                         </div>
                     }
@@ -87,7 +78,7 @@
                     <p><strong>Đáp án đúng:</strong> <span style="color:green; font-weight: bold">@question.Dap_an_dung</span></p>
 
 
-                    
+
 
                     <!-- Giải thích chi tiết đáp án -->
                     <div class="mt-2">
