--- a/ToeicWeb/Areas/Customer/Views/Voca/Index.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Voca/Index.cshtml
@@ -33,6 +33,7 @@
 
         .hover-effect:hover {
             background-color: #f0f0f0; /* Thêm nền sáng khi hover */
+            height: 220px;
             border-radius: 10px;
             transform: scale(1.05); /* Phóng to phần tử khi hover */
         }
