--- a/ToeicWeb/Areas/Customer/Views/Voca/VocabularyDetail.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Voca/VocabularyDetail.cshtml
@@ -2,7 +2,7 @@
 
 <!-- Tiêu đề -->
 <div class="col-12 text-center">
-    <h2>@Model.Mabaituvung.Ten_bai</h2>
+    <h2 style="color:#b10021;">@Model.Mabaituvung.Ten_bai</h2>
     @* <button class="btn btn-secondary">Thoát</button> *@
 </div>
 <div class="container my-5">
