--- a/ToeicWeb/Areas/Customer/Views/Grammar/GrammarDetail.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Grammar/GrammarDetail.cshtml
@@ -2,23 +2,17 @@
 
 <!-- Tiêu đề -->
 <div class="col-12 text-center">
-    <h2>@Model.Mabainguphap.Ten_bai</h2>
-    @* <button class="btn btn-secondary">Thoát</button> *@
+    <h2 style="color:#b10021;"> @Model.Mabainguphap.Ten_bai</h2>
 </div>
-<style>
-    .custom-text {
-        color: black !important; /* Đảm bảo màu đen */
-        font-weight: 500; /* Độ dày chữ */
-    }
-</style>
 
-<div class="container rounded-4" style="max-width: 1220px;box-shadow: 0 2px 4px rgba(0, 0, 0, .08), 0 4px 12px rgba(0, 0, 0, .08);margin-left: -6rem;">
+
+<div class="container rounded-4" style="max-width: 1300px;box-shadow: 0 2px 4px rgba(0, 0, 0, .08), 0 4px 12px rgba(0, 0, 0, .08)">
     <div class="row">
         <!-- Repeat this block for each item -->
         @for (int i = 0; i < Model.Noidungbainguphaps.Count; i++)
         {
             <div class="col-12 mb-4">
-                <div class="p-3 shadow-sm">
+                <div class="p-3 mt-5">
                     <div class="row">
 
                         <!-- Right side: Content -->
@@ -35,3 +29,9 @@
         }
     </div>
 </div>
+<style>
+    .custom-text {
+        color: black !important;
+        font-weight: 500;
+    }
+</style>
