--- a/ToeicWeb/Areas/Customer/Views/Grammar/Index.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Grammar/Index.cshtml
@@ -5,7 +5,7 @@
         {
             <div class="col-md-2 my-4 m-3">
                 <a asp-area="Customer" asp-controller="Grammar" asp-action="GrammarDetail" asp-route-mabainguphapId="@Model[i].Id" class="hover-effect text-decoration-none text-dark d-block">
-                    <div class="circle-icon mb-2">
+                    <div class="circle-icon mb-2" >
                         <img src="~/@Model[i].ImageUrl" alt="Grammar Image" class="img-fluid rounded" style="max-height: 120px; object-fit: cover;">
                     </div>
                     <h6 class="mt-3">@Model[i].Ten_bai</h6>
@@ -33,6 +33,7 @@
 
         .hover-effect:hover {
             background-color: #f0f0f0; /* Thêm nền sáng khi hover */
+            height: 240px;
             border-radius: 10px;
             transform: scale(1.05); /* Phóng to phần tử khi hover */
         }
@@ -48,7 +49,8 @@
 
     .circle-icon {
         display: flex;
-        justify-content: center; /* Canh giữa hình ảnh */
+        justify-content: center; 
+        height: 100px;
     }
 
     h6 {
