--- a/ToeicWeb/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewData["Title"] TOEIC</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/customer/lib/bootstrap/dist/css/bootstrap.css" />
-    <script src="~/customer/js/scriptt.js" defer></script>
     @* <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" /> *@
     <link rel="stylesheet" href="~/ToeicWeb.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -14,30 +13,28 @@
 
 </head>
 <body>
-    <header>
-
-        @await Html.PartialAsync("_Navbar")
-        
+   <header>
+        @await Html.PartialAsync("_Navbar") <!-- Navbar -->
         @if (ViewData["NavbarType"] == "_NavbarBack")
         {
             @await Html.PartialAsync("_NavbarBack")
         }
-        @if (ViewData["NavbarType"] == "_NavbarThoat")
+        else if (ViewData["NavbarType"] == "_NavbarThoat")
         {
             @await Html.PartialAsync("_NavbarThoat")
         }
+     
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
-            @RenderBody()
+            <div id="content">
+                @RenderBody() <!-- Nội dung chính -->
+            </div>
         </main>
     </div>
-@* 
-    <footer class="border-top footer text-muted bg-primary">
-        <div class="container">
-            &copy; 2024 - ToeicWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Contact</a>
-        </div>
-    </footer> *@
+
+  
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -48,5 +45,8 @@
 
     <script src="//cdn.datatables.net/2.1.4/js/dataTables.min.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
+    @* <script src="~/js/site.js"></script>  *@
+   <script src="~/customer/js/script.js"></script>
 </body>
 </html>
