--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -267,13 +267,8 @@
                                     </span>
                                     <span class="menu-title">Quản lý bài tập nge</span>
                                 </span>
-                                <!--end:Menu link-->
-
                             </a>
-                            <!--end:Menu item-->
-                            <!--begin:Menu item-->
-                            <div data-kt-menu-trigger="click" class="menu-item here show menu-accordion">
-                                <!--begin:Menu link-->
+                            <a href="#" class="nav-link nav-linkH menu-item" id="dethiLink">
                                 <span class="menu-link">
                                     <span class="menu-icon">
                                         <i class="bi bi-layout-text-window-reverse" style="font-size: 18px">
@@ -283,46 +278,11 @@
                                             <span class="path4"></span>
                                         </i>
                                     </span>
-                                    <a class="menu-title">Quản lý đề thi đọc</a>
+                                    <span class="menu-title">Quản lý đề thi</span>
                                 </span>
-                                <!--end:Menu link-->
-                            </div>
-                            <!--end:Menu item-->
-                            <!--begin:Menu item-->
-                            <div data-kt-menu-trigger="click" class="menu-item here show menu-accordion">
-                                <!--begin:Menu link-->
-                                <span class="menu-link">
-                                    <span class="menu-icon">
-                                        <i class="bi bi-headphones" style="font-size: 18px">
-                                            <span class="path1"></span>
-                                            <span class="path2"></span>
-                                            <span class="path3"></span>
-                                            <span class="path4"></span>
-                                        </i>
-                                    </span>
-                                    <a class="menu-title">Quản lý đề thi nghe</a>
-                                </span>
-                                <!--end:Menu link-->
-                            </div>
-                            <!--end:Menu item-->
-                            <!--begin:Menu item-->
-                            <div data-kt-menu-trigger="click" class="menu-item here show menu-accordion">
-                                <!--begin:Menu link-->
-                                <span class="menu-link">
-                                    <span class="menu-icon">
-                                        <i class="bi bi-bookmarks" style="font-size: 18px">
-                                            <span class="path1"></span>
-                                            <span class="path2"></span>
-                                            <span class="path3"></span>
-                                            <span class="path4"></span>
-                                        </i>
-                                    </span>
-                                    <a class="menu-title">Quản lý đề thi</a>
-                                </span>
-                                <!--end:Menu link-->
-                            </div>
-                            <!--end:Menu item-->
-                            <!--begin:Menu item-->
+                            </a>
+                          
+                           
                             <a href="#" class="nav-link nav-linkH menu-item" id="vocaLink">
                                 <!--begin:Menu link-->
                                 <span class="menu-link">
@@ -497,9 +457,9 @@
                     case 'customerLink':
                         window.location.href = '/Customer/Home/Index';
                         return;
-                    case 'dedocLink':
-                    case 'dengeLink':
-                    case 'deLink':
+                    case 'dethiLink':
+                        url = '/Admin/BThi/Index';
+                        break;
                     case 'vocaLink':
                         url = '/Admin/Voca/Index';
                         break;
@@ -596,6 +556,11 @@
                             loadDataTable();
                         });
                         break;
+                    case '/Admin/BThi/Index':
+                        $.getScript('@Url.Content("~/adminn/js/bthi.js")', function() {
+                            loadDataTable();
+                        });
+                        break;
                 }
             }
 
@@ -626,6 +591,8 @@
                         return 'vocaLink';
                     case '/Admin/User/Index':
                         return 'userLink';
+                    case '/Admin/BThi/Index':
+                        return 'dethiLink';
                     default:
                         return '';
                 }
