--- a/ToeicWeb/Areas/Admin/Views/Grammar/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Grammar/Index.cshtml
@@ -78,24 +78,10 @@
              
 
 @section Scripts {
-   
     <script src="~/adminn/js/mabaigrammar.js"></script>
     <script>
-   tinymce.init({
-    selector: '#Noi_dung',
-    setup: function(editor) {
-        editor.on('input', function () {
-            if (editor.getContent().trim() !== "") {
-                editor.getContainer().style.border = "1px solid lightgrey"; 
-                $('#Noi_dungError').text('').hide(); 
-            } else {
-                editor.getContainer().style.border = "1px solid red"; 
-            }
+        $(document).ready(function () {
+            initTinyMCE();  // Gọi hàm khởi tạo TinyMCE
         });
-    },
-    plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount',
-    toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table | align lineheight | numlist bullist indent outdent | emoticons charmap | removeformat',
-});
-
-</script>
+    </script>
 }
