--- a/ToeicWeb/Areas/Admin/Views/Voca/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Voca/Index.cshtml
@@ -56,6 +56,9 @@
                     <label for="NewImageFileMavoca" class="d-flex align-items-center fs-5 fw-semibold mb-2">
                         <span class="required">Ảnh bài từ vựng</span>
                     </label>
+                    <div id="ImageVocaFileInfo" class="mb-2" style="display:none;">
+                        <p>File hiện tại: <span id="ImageFileMavoca"></span></p>
+                    </div>
                     <input type="file" class="form-control" id="NewImageFileMavoca" name="ImageFileMavoca" accept="image/*" />
                     <span id="ImageFileMavocaError" class="text-danger"></span>
                 </div>
